components/scigateway/envs/production/scigateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scigateway
  namespace: fia
spec:
  template:
    spec:
      containers:
        - name: scigateway
          image: ghcr.io/fiaisis/scigateway@sha256:198c9d0bb5c98b2384feb22cef910d88e56d1d24fcccc5c1c70a328003b2b4e7
